[gd_scene load_steps=4 format=3 uid="uid://cfl1ai2cuhifs"]

[ext_resource type="Script" path="res://scripts/combat/combat_ui.gd" id="1_uqqnm"]
[ext_resource type="Texture2D" uid="uid://dm0leq8kl1n42" path="res://assets/graphics/combat/iconsDefault.png" id="2_pfd1q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q50e4"]
atlas = ExtResource("2_pfd1q")
region = Rect2(578, 0, 64, 64)

[node name="CombatUI" type="Control" groups=["CombatUI"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_uqqnm")

[node name="SkillsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CoinContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 62.0
offset_top = 45.0
offset_right = 164.0
offset_bottom = 109.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CoinContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_q50e4")

[node name="CoinsLabel" type="Label" parent="CanvasLayer/CoinContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "20"
